fix: DELETE, GET /api/offers/{guid}
